# dj-backend

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
apps/users/: admin.py  models.py  schema.py
apps/users/templates/mail/: password_reset.txt
config/: settings.py  urls.py  wsgi.py
